# C_Practice

./: .gitignore  CMakeLists.txt  Makefile  Test.c  output.txt  priority.c
cmake/: Compiler.cmake  Linker.cmake  Optional.cmake  Warnings.cmake
